--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ MarkupSafe==0.23
 PyYAML==3.11
 Werkzeug==0.9.6
 ecdsa==0.11
+elasticsearch==1.2.0
 itsdangerous==0.24
 paramiko==1.15.1
 py-dateutil==2.2
 pycrypto==2.6.1
 requests==2.4.3
 six==1.8.0
+urllib3==1.9.1
 wsgiref==0.1.2
