--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ PyYAML==3.11
 Werkzeug==0.9.6
 ecdsa==0.11
 elasticsearch==1.2.0
+gunicorn==19.1.1
 itsdangerous==0.24
 paramiko==1.15.1
 py-dateutil==2.2
