--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,13 @@ ecdsa==0.11
 elasticsearch==1.2.0
 gunicorn==19.1.1
 itsdangerous==0.24
+numpy==1.9.1
+pandas==0.15.1
 paramiko==1.15.1
 py-dateutil==2.2
 pycrypto==2.6.1
+python-dateutil==2.3
+pytz==2014.10
 requests==2.4.3
 six==1.8.0
 urllib3==1.9.1
